# design-genai

./: 404.html  CONTRIBUTING.md  README.md  index.html  journal-design-genai.mdx  mkdocs.yml  pyproject.toml  sitemap.xml
architecture/: index.html
contributing/: index.html
design_generator/: __init__.py  __main__.py  dataset_builder.py  generate.py  model.py  train.py
docs/: architecture.md  index.md  reference.md  research.md
docs/getting-started/: installation.md  quick-start.md
getting-started/installation/: index.html
getting-started/quick-start/: index.html
paper/: main.aux  main.out  main.tex
reference/: index.html
research/: index.html
search/: search_index.json
tests/: __init__.py  test_cli.py  test_dataset_builder.py  test_generate_html.py  test_generate_spec.py  test_integration.py  test_model.py  test_train.py
